--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ visbrain @ https://github.com/lassemadsen/visbrain/archive/master.zip#egg=visbra
 numpy>=1.13
 pandas
 brainspace>=0.1.2
+vtk==9.3.1
 scipy
 matplotlib>=3.3.0
 pillow
