--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,12 +4,12 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.8"
+    python: "3.7"
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
   builder: html
-  configuration: docs/conf.py
+  configuration: docs/source/conf.py
   fail_on_warning: false
 
 # Optionally build your docs in additional formats such as PDF
