--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,4 @@
-Sphinx==4.2.0
+sphinx==4.2.0
 sphinx-gallery==0.10.0
 sphinx-rtd-theme==1.0.0
 sphinxcontrib-applehelp==1.0.2
@@ -7,4 +7,5 @@ sphinxcontrib-htmlhelp==2.0.0
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
+
 -r ../requirements.txt
