--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,16 +1,12 @@
-# Required
 version: 2
 
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.7"
+    python: "3.9"
 
-# Build documentation in the docs/ directory with Sphinx
-sphinx:
-  builder: html
-  configuration: docs/source/conf.py
-  fail_on_warning: false
-
-# Optionally build your docs in additional formats such as PDF
-formats: all
+python:
+  install:
+    - method: pip
+      path: .
+    - requirements: requirements.txt
