--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,14 +4,14 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.9"
+  commands:
+    - export QT_QPA_PLATFORM=offscreen  # Set Qt to offscreen mode
+    - export MPLCONFIGDIR=/tmp/matplotlib  # Set Matplotlib config directory to avoid writing to user directories
 
 python:
   install:
     - requirements: docs/requirements.txt  # Ensures dependencies are installed from the requirements.txt
+
     
 sphinx:
   configuration: docs/source/conf.py
-  
-envs:
-  - QT_QPA_PLATFORM=offscreen  # Disable Qt GUI (forces offscreen mode)
-  - MPLCONFIGDIR=/tmp/matplotlib  # Ensures Matplotlib configuration doesn't attempt to write to user directories
