--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 visbrain @ https://github.com/lassemadsen/visbrain/archive/master.zip#egg=visbrain
-numpy>=1.13
+numpy>=1.23, <=1.26.4
 pandas
 brainspace>=0.1.2
 vtk==9.3.1
